envoy-filters/header_routing.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: grpc-transcoder-service_a
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: service_a
  configPatches:

    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          portNumber: 7373
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
              subFilter:
                name: "envoy.filters.http.router"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.lua
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            inline_code: |
              function string.starts(String,Start)
                  return string.sub(String,1,string.len(Start))==Start
              end
              function header_delete(String)
                  if string.starts(String, "grpc-del-header-") then
                      return true, string.sub(String,string.len("grpc-del-header-")+1,string.len(String))
                  else
                      return false, nil
                  end
              end
              function header_add(String)
                  if string.starts(String, "grpc-add-header-") then
                      return true, string.sub(String,string.len("grpc-add-header-")+1,string.len(String))
                  else
                      return false, nil
                  end
              end

              function envoy_on_response(response_handle)

                tbl_remove = {}
                tbl_add = {}
                new_status = ""

                -- Traverse all headers and mark the ones to delete or to add. Mark also a status change
                for k, v in pairs(response_handle:headers()) do

                    do_remove, header_name = header_delete(k)
                    if do_remove then
                        tbl_remove[k] = header_name
                    end

                    do_add, header_name = header_add(k)
                    if do_add then
                        tbl_remove[k] = "-"
                        tbl_add[header_name] = v
                    end

                    if k == "grpc-replace-status" then
                        new_status = v
                        tbl_remove[k] = "-"
                    end
                  end

                  for k, v in pairs(tbl_remove) do
                      response_handle:headers():remove(k)
                      response_handle:headers():remove(v)
                  end

                  for k, v in pairs(tbl_add) do
                      response_handle:headers():add(k, v)
                  end

                  if string.len(new_status) > 0 then
                      response_handle:headers():replace(":status", new_status)
                  end
              end
