envoy-filters/wss_close.yaml
# DEPRECATED: Use the istiod config from v1.12
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: delayedclose
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: MERGE
      value:
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          delayed_close_timeout: 0s
